--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
+*{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 20px;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+  margin: 5px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main_div{
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+.delete{
+  font-size: 20px;
+  border: none;
+  margin-left: 30px;
+  background-color: rgb(75, 0, 146);
+  margin-bottom: 4px;
+  margin-left: 20%;
 }
+.label{
+  background-color: rgb(75, 0, 146);
+  padding: 10px 25px 10px 25px;
+}
+input{
+  width: 300px;
+  padding: 10px 25px 10px 25px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.label_head{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+li{
+  background-color: rgb(75, 0, 146);
+  padding: 2px 0px 2px 4px;  
+}
+.add_btn{
+  padding: 10px 25px 10px 25px;
+}
+.list{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: rgb(75, 0, 146);
+  width: 500px;
 }
